--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
-
+<% @recipes.each do |recipe| %>
 
  <a href="/recipes/<%=recipe.id %>"></a>
- <label for="name">Name:<%=recipe.name%></label>
- <label for="ingredients">Ingredients:<%=recipe.ingredients%></label>
- <label for="cook time">Cook Time:<%=recipe.cook_time%></label>
+ Name:<%=recipe.name%>
+ Ingredients:<%=recipe.ingredients%>
+ Cook Time:<%=recipe.cook_time%>
    <% end %>
